# error-assistant

./: .gitignore  README.md  dirSnapshot.p  pyproject.toml  requirements.txt
src/: dirSnapshot.p
src/error_assistant/: dirSnapshot.p  edit_config.py  main.py  test.py
src/error_assistant/code_base/: code_base.py
src/error_assistant/entry_points/: chat.py  debug.py  edit.py  main.py
src/error_assistant/error_agent/: agent.py  prompts.py
src/error_assistant/error_assistant_config/: config.py  config.toml  log_config.py
src/error_assistant/tests/: test_code_base.py  test_vectorizer.py
src/error_assistant/vector_store/: Retriever.py  VectorStore.py
src/error_assistant/vectorizer/: Observer.py  Vectorizer.py
src/error_assistant/watchers/: CodeBaseHandler.py  Observer.py  code_base_observer.py
